@@ -10,6 +10,7 @@ export(ssh_exec_internal)
 export(ssh_exec_wait)
 export(ssh_info)
 export(ssh_tunnel)
+importFrom(askpass,askpass)
 useDynLib(ssh,C_blocking_tunnel)
 useDynLib(ssh,C_disconnect_session)
 useDynLib(ssh,C_libssh_version)
