@@ -58,3 +58,4 @@ ssh_disconnect(session)
 Other ssh: \code{\link{scp}}, \code{\link{ssh_exec}},
   \code{\link{ssh_tunnel}}
 }
+\concept{ssh}
