@@ -4,7 +4,8 @@
 \alias{ssh_tunnel}
 \title{Create SSH tunnel}
 \usage{
-ssh_tunnel(session, port = 5555, target = "rainmaker.wunderground.com:23")
+ssh_tunnel(session, port = 5555,
+  target = "rainmaker.wunderground.com:23")
 }
 \arguments{
 \item{session}{ssh connection created with \code{\link[=ssh_connect]{ssh_connect()}}}
@@ -27,3 +28,4 @@ connection, not as a long running proxy server.
 Other ssh: \code{\link{scp}}, \code{\link{ssh_connect}},
   \code{\link{ssh_exec}}
 }
+\concept{ssh}
